[gd_scene load_steps=6 format=3 uid="uid://2rdbyr1vr4wa"]

[ext_resource type="Script" path="res://Level/Level.gd" id="1_82nka"]
[ext_resource type="Theme" uid="uid://daqdxtqjjb22o" path="res://number_buttons_theme.tres" id="2_kuuqi"]
[ext_resource type="PackedScene" uid="uid://byttalj77khjv" path="res://Characters/Player/Player.tscn" id="2_n12jd"]
[ext_resource type="PackedScene" uid="uid://b0hqbrugygi1f" path="res://Characters/Pets/Rocket.tscn" id="3_lexb1"]
[ext_resource type="PackedScene" uid="uid://b6detpha24ikx" path="res://Items/dog food/dog_food.tscn" id="4_46d3r"]

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_82nka")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lanes" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("2_kuuqi")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="Problem" type="VBoxContainer" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Problem" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="player_number" type="Label" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem/Problem"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "
"

[node name="operand" type="Label" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem/Problem"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.72549, 0.968627, 1)

[node name="variable" type="Label" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem/Problem"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.72549, 0.968627, 1)

[node name="equals" type="Label" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem/Problem"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "="

[node name="target_number" type="Label" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem/Problem"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Go" type="Button" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Go"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Operands" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2

[node name="plus" type="Button" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Buttons/Operands"]
layout_mode = 2
text = "+"

[node name="minus" type="Button" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Buttons/Operands"]
layout_mode = 2
text = "-"

[node name="Numbers" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2

[node name="Score" type="HBoxContainer" parent="VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8

[node name="Player" parent="." instance=ExtResource("2_n12jd")]
position = Vector2(55, 599)

[node name="DogFood" parent="." instance=ExtResource("4_46d3r")]
visible = false
position = Vector2(55, 599)

[node name="Rocket" parent="." instance=ExtResource("3_lexb1")]
position = Vector2(180, 127)

[connection signal="pressed" from="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Problem/Go" to="." method="execute_problem"]
[connection signal="pressed" from="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Buttons/Operands/plus" to="." method="select_operand" binds= ["+"]]
[connection signal="pressed" from="VBoxContainer/Panel/VBoxContainer/HBoxContainer/Buttons/Operands/minus" to="." method="select_operand" binds= ["-"]]
